# Video-Captioning-System

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  main.py  pyproject.toml  requirements.txt  setup.sh  validate_project.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: video_captioning_dataset.yaml
configs/eval/: default.yaml
configs/model/: blip2_video_captioning.yaml
configs/train/: default.yaml
demo/: streamlit_app.py
notebooks/: video_captioning_demo.ipynb
src/: cli.py
src/data/: __init__.py
src/eval/: __init__.py
src/models/: __init__.py
src/training/: __init__.py
src/utils/: __init__.py
tests/: test_video_captioning.py
